tetrate/tis0209/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bad-resource-1
spec:
  host: "my-service.example-namespace.svc.cluster.local"
  subsets:
    - name: version-subset-1
    - name: version-subset-2
      labels:
        version: v1
